--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,8 @@ deployment:
   production:
     branch: production
     commands:
-      - ./deploy_prod.sh
+      - deploy_prod.sh
   staging:
     branch: master
     commands:
-      - ./deploy_staging.sh
+      - deploy_staging.sh
